Initialize basic map

--- a/app.json
+++ b/app.json
@@ -19,6 +19,14 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.trippy.app",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyAFCa4jjoT3_oGxjPSUEd8tfvAcpmRLKA4"
+        }
+      }
     }
   }
 }
