--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15"
+    "react-navigation-stack": "^2.0.15",
+    "react-native-maps": "0.26.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
