--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-maps": "^0.26.1",
     "react-native-navigation": "^4.5.3",
     "react-native-safe-area-context": "0.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15",
-    "react-native-maps": "0.26.1"
+    "react-navigation-stack": "^2.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
